--- a/index.html
+++ b/index.html
@@ -7518,6 +7518,9 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <center><img alt="No description has been provided for this image" src="https://github.com/DACSS-CSSmeths/guidelines/blob/main/pics/small_logo_ccs_meths.jpg?raw=true" width="700"/></center>
+<a href="https://colab.research.google.com/github/DACSS-CSSmeths-winter/optimization_MinMax/blob/main/index.ipynb" target="_blank">
+<img alt="Open In Colab" src="https://colab.research.google.com/assets/colab-badge.svg"/>
+</a>
 <hr/>
 <p><a id="home"></a></p>
 <h1 id="Introduction-to-Optimization-for-Decision-Making">Introduction to Optimization for Decision Making<a class="anchor-link" href="#Introduction-to-Optimization-for-Decision-Making">¶</a></h1>
@@ -7802,7 +7805,7 @@ Then, call the library:</p>
 Version: 2.10.12 
 Build Date: Aug  2 2025 
 
-command line - cbc /var/folders/ys/ndy0r6cs0xs8h17788sx08sh0000gn/T/0a29da8fb67c4d5d9e98f9084a39b416-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /var/folders/ys/ndy0r6cs0xs8h17788sx08sh0000gn/T/0a29da8fb67c4d5d9e98f9084a39b416-pulp.sol (default strategy 1)
+command line - cbc /var/folders/ys/ndy0r6cs0xs8h17788sx08sh0000gn/T/8cf6af511c2b4e8baa47cda78264fa5c-pulp.mps -max -timeMode elapsed -branch -printingOptions all -solution /var/folders/ys/ndy0r6cs0xs8h17788sx08sh0000gn/T/8cf6af511c2b4e8baa47cda78264fa5c-pulp.sol (default strategy 1)
 At line 2 NAME          MODEL
 At line 3 ROWS
 At line 8 COLUMNS
